# Collaborative_Pac-Man

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  WORKFLOW.md
.github/workflows/: pr-check.yml
docs/: ProjectTree.md  STUDENT_GUIDE.md  WORKFLOW.md  agent.md  core_system.md  management_system.md  rendering_system.md
docs/student_manuals/: StudentA_PacmanAI.md  StudentB_MonsterAI.md  StudentC_ManagementSystem.md
include/: ai_interface.h  config.h  config.hpp  game_control_system.h  game_map.h  game_state_manager.h  game_types.h  management_interface.h  management_system.h  monster_ai.h  pacman_ai.h  random_map_generator.h  renderer.h  turn_based_game_loop.h  unicode_helper.h  visibility_system.h  visible_area.h
src/: main.cpp
src/agents/: ai_interface.cpp  monster_ai.cpp  pacman_ai.cpp
src/core/: game_control_system.cpp  game_map.cpp  game_state_manager.cpp  random_map_generator.cpp  turn_based_game_loop.cpp  visibility_system.cpp  visible_area.cpp
src/management/: management_interface.cpp  management_system.cpp
src/render/: renderer.cpp
